# wordle-buddy

./: .flake8  .gitignore  .readthedocs.yaml  README.md  index.html  main.py  requirements.txt  setup.cfg
data/: allowed_words_entropies.txt
docs/: modules.rst  tests.rst
docs/source/: conf.py  index.rst  requirements.txt  usage.rst  wordle_buddy.rst
src/tests/: context.py  tempCodeRunnerFile.py  test_utilities.py
src/wordle_buddy/: utilities.py  wordle.py
src/wordle_buddy.egg-info/: PKG-INFO  SOURCES.txt
src/wordle_oden/: tempCodeRunnerFile.py
src/wordle_oden.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wordle_oden/wordle_oden.egg-info/: PKG-INFO  SOURCES.txt
