[metadata]
name = wordle_oden
version = 0.1.8
author = Eric Oden
author_email = ericjoden94@gmail.com
description = A game of wordle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ericoden/wordle-oden
project_urls =
    Bug Tracker = https://github.com/ericoden/wordle-oden/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/wordle_oden
    bin/wordle_oden_manual
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.txt, *.rst
wordle_oden = data/*.txt

[options.packages.find]
where = src